objects/White_List__c.object
<CustomObject>
    <description>This object will contain the white list information about different document specification and PDKs. A white list will belong to a specific Document Specification or a PDK.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Short_Name__c</fullName>
        <formula>Account__r.Short_Name__c</formula>
        <label>Account Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>White List</relationshipLabel>
        <relationshipName>White_List</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Design_Spec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specification</label>
        <referenceTo>Design_Spec__c</referenceTo>
        <relationshipLabel>White List</relationshipLabel>
        <relationshipName>White_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Revision_ID__c</fullName>
        <formula>Design_Spec__r.Old_Revision_ID__c</formula>
        <label>Old Revision ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Text_Id__c</fullName>
        <formula>Design_Spec__r.OpenText_ID__c</formula>
        <label>Open Text Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PDK__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master PDK</label>
        <referenceTo>PDK__c</referenceTo>
        <relationshipLabel>White List</relationshipLabel>
        <relationshipName>White_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>White List</relationshipLabel>
        <relationshipName>White_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_PDK__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PDK</label>
        <referenceTo>Sub_PDK__c</referenceTo>
        <relationshipLabel>White List</relationshipLabel>
        <relationshipName>White_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>White List</label>
    <nameField>
        <displayFormat>WL-{000000}</displayFormat>
        <label>White List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>White List</pluralLabel>
    <recordTypes>
        <fullName>Design_Spec</fullName>
        <active>true</active>
        <description>This record type is for Design Specs where the Design_Spec__c Lookup field will be visible and will be mandatory ensured by a Validation Rule</description>
        <label>Design Spec</label>
    </recordTypes>
    <recordTypes>
        <fullName>Package</fullName>
        <active>true</active>
        <description>This record type is for Packages where the Package__c Lookup field will be visible and will be mandatory ensured by a Validation Rule</description>
        <label>Package</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sub_PDK</fullName>
        <active>true</active>
        <description>This record type is for Sub PDKs where the Sub_PDK__c Lookup field will be visible and will be mandatory ensured by a Validation Rule</description>
        <label>PDK</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Design_Spec_Lookup_Mandatory_for_Design</fullName>
        <active>true</active>
        <description>When Record Type Name is equal to Design Specs, then Design Spec Lookup Field (Design_Spec__c) should be mandatory.</description>
        <errorConditionFormula>AND(RecordType.Name == &apos;Design Spec&apos;,Design_Spec__c == &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Design_Spec__c</errorDisplayField>
        <errorMessage>Design Spec Lookup is Mandatory for Design Spec White Lists</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Package_Lookup_Mandatory_for_Package_WL</fullName>
        <active>true</active>
        <description>When Record Type Name is equal to Packages, then Package Lookup Field (Package__c) should be mandatory.</description>
        <errorConditionFormula>AND(RecordType.Name == &apos;Package&apos;,Package__c  == &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Package__c</errorDisplayField>
        <errorMessage>Package Lookup is Mandatory for Package White Lists</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SubPDK_Lookup_Mandatory_for_SubPDK_WL</fullName>
        <active>true</active>
        <description>When Record Type Name is equal to Sub PDKs, then Sub PDK Lookup Field (Sub_PDK__c) should be mandatory.</description>
        <errorConditionFormula>AND(RecordType.Name == &apos;Sub PDK&apos;,Sub_PDK__c  == &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Sub_PDK__c</errorDisplayField>
        <errorMessage>PDK Lookup is Mandatory for PDK White Lists</errorMessage>
    </validationRules>
</CustomObject>